         4. CHANNEL()
         5. CURL()
         6. CUT()
         7. DB_DELETE()
         8. FILTER()
         9. GLOBAL()
        10. IFTIME()
        11. KEYPADHASH()
        12. ODBC()
        13. QUOTE()
        14. RAND()
        15. REALTIME()
        16. SHA1()
        17. SORT()
        18. SPRINTF()
        19. SQL_ESC()
        20. STAT()
        21. STRPTIME()
    * Apps that have changes to their interface:
         1. Authenticate() -- optional maxdigits argument added.
         2. ChanSpy() -- new options:
                o w -- Enable 'whisper' mode, so the spying channel can talk to...
                o W -- Enable 'private whisper' mode, so the spying channel can...
         3. DBdel() -- now marked as DEPRECATED in favor of the DB_DELETE func
         4. Dial()
                o New Option: O([x]) for Zaptel operator mode
                o New Option: K/k parking via dtmf tones
         5. Dictate() -- optional filename argument added.
         6. Directory() -- new option: e - In addition to the name, also read the extension number...
         7. ForkCDR() -- new options: 
                o 'a' -- update answer time on new cdr
                o 'A' -- Lock the orig CDR answer time against changes.
                o 'D' -- Copy the disposition from the orig to the new CDR.
                o 'd' -- clear the dstcannel field in the new CDR.
                o 'e' -- set the end time of the original CDR.
                o 'R' -- do NOT reset the new CDR.
                o 's' -- Add/change var in orig CDR.
                o 'T' -- Force ast_cdr_end, answer to obey LOCKED flag for the orig. CDR.
                      -- ast_cdr_setvar will be forced also (used by the CDR() func in write mode)
         8. Meetme() -- new options:
                o 'I' -- announce user join/leave without review
                o 'l' -- set listen only mode (Listen only, no talking)